--- a/analytics/exploring01.ipynb
+++ b/analytics/exploring01.ipynb
@@ -94,8 +94,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Raw Data Count(Exercises, Days): (2336, 323)\n",
-      "Exercise Transform Data(Tuple) Count: 2336\n"
+      "Raw Data Count(Exercises, Days): (2342, 324)\n",
+      "Exercise Transform Data(Tuple) Count: 2342\n"
      ]
     }
    ],
@@ -174,7 +174,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Exercise Days: 323\n"
+      "Exercise Days: 324\n"
      ]
     }
    ],
@@ -200,12 +200,12 @@
      "text": [
       "('Arnold Press[Dumbbell]', 29)\n",
       "('Assisted Dips[Machine]', 56)\n",
-      "('Assisted Pull-Up[Machine]', 70)\n",
+      "('Assisted Pull-Up[Machine]', 71)\n",
       "('Back Extension', 44)\n",
       "('Barbell Lunge[Smith Machine]', 1)\n",
       "('Behind The Neck Press[Smith Machine]', 6)\n",
       "('Bent Over Lateral Raise[Dumbbell]', 3)\n",
-      "('Bent Over Row[Barbell]', 18)\n",
+      "('Bent Over Row[Barbell]', 19)\n",
       "('Bent Over Row[Dumbbell]', 18)\n",
       "('Biceps Curls[Barbell]', 1)\n",
       "('Biceps Curls[Dumbbell]', 2)\n",
@@ -253,14 +253,15 @@
       "('Incline Chest Fly[Dumbbell]', 3)\n",
       "('Incline Dumbbel Row[Dumbbell]', 1)\n",
       "('Jump Squat[Kettlebell]', 1)\n",
-      "('Lat Pulldown[Machine]', 112)\n",
+      "('Lat Pulldown[Machine]', 113)\n",
       "('Leg Extension[Machine]', 63)\n",
-      "('Long Pull Row[Cable]', 77)\n",
+      "('Long Pull Row[Cable]', 78)\n",
       "('Lunge[Dumbbell]', 1)\n",
       "('Lying Leg Curls[Machine]', 127)\n",
       "('Lying Triceps Extension[EZ Curl Bar]', 10)\n",
       "('Military Press[Smith Machine]', 19)\n",
       "('One Arm Bent Over Row[Dumbbell]', 4)\n",
+      "('One Arm Low Row[Machine]', 1)\n",
       "('One Arm Seated Row[Machine]', 6)\n",
       "('One Arm Shoulder Press[Dumbbell]', 3)\n",
       "('One Leg Daedlift[Kettlebell]', 2)\n",
@@ -289,7 +290,7 @@
       "('Split Squat[Smith Machine]', 18)\n",
       "('Squat[Dumbbell]', 5)\n",
       "('Squat[Kettlebell]', 1)\n",
-      "('Straight Arm Pulldown[Cable]', 56)\n",
+      "('Straight Arm Pulldown[Cable]', 57)\n",
       "('Sumo Deadlift[Kettlebell]', 1)\n",
       "('Sumo Deadlift[Smith Machine]', 3)\n",
       "('Sumo Squat[Kettlebell]', 1)\n",
@@ -335,7 +336,7 @@
      "output_type": "stream",
      "text": [
       "('Lying Leg Curls[Machine]', 127)\n",
-      "('Lat Pulldown[Machine]', 112)\n",
+      "('Lat Pulldown[Machine]', 113)\n",
       "('Plank', 104)\n",
       "('Deadlift[Barbell]', 100)\n",
       "('Hip Abduction[Machine]', 91)\n",
@@ -344,13 +345,13 @@
       "('Seated Row[Machine]', 82)\n",
       "('Hip Adduction[Machine]', 81)\n",
       "('Side Lateral Raise[Dumbbell]', 78)\n",
-      "('Long Pull Row[Cable]', 77)\n",
+      "('Long Pull Row[Cable]', 78)\n",
       "('Flat Bench Press[Barbell]', 71)\n",
-      "('Assisted Pull-Up[Machine]', 70)\n",
+      "('Assisted Pull-Up[Machine]', 71)\n",
       "('Power Leg Press[Machine]', 68)\n",
       "('Leg Extension[Machine]', 63)\n",
+      "('Straight Arm Pulldown[Cable]', 57)\n",
       "('Assisted Dips[Machine]', 56)\n",
-      "('Straight Arm Pulldown[Cable]', 56)\n",
       "('Chest Fly[Pec Deck Machine]', 55)\n",
       "('Running', 47)\n",
       "('Back Extension', 44)\n",
@@ -367,82 +368,83 @@
       "(\"Hanging Leg Raise[Captain'S Chair]\", 20)\n",
       "('Dips', 19)\n",
       "('Military Press[Smith Machine]', 19)\n",
-      "('Flat Bench Press[Dumbbell]', 18)\n",
-      "('Goblet Squat[Kettlebell]', 18)\n",
-      "('Bent Over Row[Dumbbell]', 18)\n",
-      "('Bent Over Row[Barbell]', 18)\n",
-      "('Upright Row[EZ Curl Bar]', 18)\n",
+      "('Bent Over Row[Barbell]', 19)\n",
       "('Split Squat[Smith Machine]', 18)\n",
+      "('Upright Row[EZ Curl Bar]', 18)\n",
+      "('Flat Bench Press[Dumbbell]', 18)\n",
+      "('Bent Over Row[Dumbbell]', 18)\n",
+      "('Goblet Squat[Kettlebell]', 18)\n",
       "('Hip Bridge', 15)\n",
-      "('Seated Leg Press[Machine]', 14)\n",
       "('Triceps Pushdown[Cable]', 14)\n",
+      "('Seated Leg Press[Machine]', 14)\n",
       "('Biceps Curls[Machine]', 13)\n",
-      "('Hammer Curls[Dumbbell]', 12)\n",
-      "('Deadlift[Kettlebell]', 12)\n",
       "('Pull-Up', 12)\n",
-      "('Side Lateral Raise[Machine]', 11)\n",
+      "('Deadlift[Kettlebell]', 12)\n",
+      "('Hammer Curls[Dumbbell]', 12)\n",
       "('Push-Up', 11)\n",
+      "('Side Lateral Raise[Machine]', 11)\n",
       "('Decline Bench Press[Barbell]', 10)\n",
       "('Lying Triceps Extension[EZ Curl Bar]', 10)\n",
       "('Hiit[Cycle]', 9)\n",
       "('Deadlift[Dumbbell]', 8)\n",
       "('Cable Cross-Over[Cable]', 8)\n",
       "('Flat Bench Press[Machine]', 8)\n",
-      "('Split Squat[Kettlebell]', 7)\n",
       "('Flat Bench Press[Smith Machine]', 7)\n",
-      "('Behind The Neck Press[Smith Machine]', 6)\n",
+      "('Split Squat[Kettlebell]', 7)\n",
+      "('Hack Squat[Machine]', 6)\n",
       "('One Arm Seated Row[Machine]', 6)\n",
       "('Seated Bent Over Lateral Raise[Dumbbell]', 6)\n",
-      "('Hack Squat[Machine]', 6)\n",
+      "('Behind The Neck Press[Smith Machine]', 6)\n",
       "('Squat[Dumbbell]', 5)\n",
+      "('Reverse Cable Cross-Over[Cable]', 5)\n",
       "('Body-Weight Squat', 5)\n",
       "('Hip Thrust', 5)\n",
-      "('Reverse Cable Cross-Over[Cable]', 5)\n",
       "('One Arm Bent Over Row[Dumbbell]', 4)\n",
-      "('Goblet Squat[Dumbbell]', 4)\n",
       "('Reverse Crunch', 4)\n",
+      "('Goblet Squat[Dumbbell]', 4)\n",
       "('Front Lateral Raise[Dumbbell]', 3)\n",
-      "('Bent Over Lateral Raise[Dumbbell]', 3)\n",
       "('Incline Chest Fly[Dumbbell]', 3)\n",
+      "('Bent Over Lateral Raise[Dumbbell]', 3)\n",
+      "('Hanging Leg Raise', 3)\n",
       "('One Arm Shoulder Press[Dumbbell]', 3)\n",
       "('Sumo Deadlift[Smith Machine]', 3)\n",
-      "('Hanging Leg Raise', 3)\n",
-      "('Biceps Curls[Fixed Barbell]', 2)\n",
-      "('Full Squat[Smith Machine]', 2)\n",
-      "('Biceps Curls[Dumbbell]', 2)\n",
-      "('Walking Lunge[Fixed Barbell]', 2)\n",
-      "('Dead Bug', 2)\n",
-      "('Wide Squat[Kettlebell]', 2)\n",
-      "('One Leg Daedlift[Kettlebell]', 2)\n",
-      "('Walking', 2)\n",
-      "('Triceps Kickback[Dumbbell]', 2)\n",
       "('Full Squat[Barbell]', 2)\n",
+      "('Biceps Curls[Dumbbell]', 2)\n",
       "('Trx Row', 2)\n",
-      "('Hip Abduction', 1)\n",
-      "('Hip External Rotation', 1)\n",
-      "('Split Squat', 1)\n",
-      "('Split Squat[Dumbbell]', 1)\n",
-      "('Trx Suspended Lunge', 1)\n",
-      "('Vipr Ice Skater', 1)\n",
-      "('Jump Squat[Kettlebell]', 1)\n",
-      "('Sumo Squat[Kettlebell]', 1)\n",
+      "('Biceps Curls[Fixed Barbell]', 2)\n",
+      "('Wide Squat[Kettlebell]', 2)\n",
+      "('Walking', 2)\n",
+      "('Full Squat[Smith Machine]', 2)\n",
+      "('Walking Lunge[Fixed Barbell]', 2)\n",
+      "('One Leg Daedlift[Kettlebell]', 2)\n",
+      "('Dead Bug', 2)\n",
+      "('Triceps Kickback[Dumbbell]', 2)\n",
       "('Face Pulls[Cable]', 1)\n",
-      "('Incline Dumbbel Row[Dumbbell]', 1)\n",
-      "('Trx Lunge', 1)\n",
-      "('Seated Reverse Fly[Dumbbell]', 1)\n",
-      "('Biceps Curls[EZ Curl Bar]', 1)\n",
-      "('Vipr Overhead Squat', 1)\n",
-      "('Sumo Deadlift[Kettlebell]', 1)\n",
-      "('Cable Chest Fly[Cable]', 1)\n",
-      "('Barbell Lunge[Smith Machine]', 1)\n",
-      "('Biceps Curls[Barbell]', 1)\n",
-      "('Incline Bench Cable Fly[Cable]', 1)\n",
-      "('Lunge[Dumbbell]', 1)\n",
-      "('Squat[Kettlebell]', 1)\n",
-      "('Vipr Lateral Shuffle', 1)\n",
-      "('Cross Lunges', 1)\n",
+      "('Jump Squat[Kettlebell]', 1)\n",
+      "('Vipr Ice Skater', 1)\n",
       "('Incline Bench Row[Dumbbell]', 1)\n",
-      "('One Leg Deadlift[Dumbbell]', 1)\n"
+      "('Incline Dumbbel Row[Dumbbell]', 1)\n",
+      "('One Leg Deadlift[Dumbbell]', 1)\n",
+      "('Cable Chest Fly[Cable]', 1)\n",
+      "('Biceps Curls[Barbell]', 1)\n",
+      "('Seated Reverse Fly[Dumbbell]', 1)\n",
+      "('Split Squat', 1)\n",
+      "('Hip Abduction', 1)\n",
+      "('Split Squat[Dumbbell]', 1)\n",
+      "('Sumo Squat[Kettlebell]', 1)\n",
+      "('Barbell Lunge[Smith Machine]', 1)\n",
+      "('Incline Bench Cable Fly[Cable]', 1)\n",
+      "('Trx Suspended Lunge', 1)\n",
+      "('Hip External Rotation', 1)\n",
+      "('Squat[Kettlebell]', 1)\n",
+      "('Vipr Overhead Squat', 1)\n",
+      "('Trx Lunge', 1)\n",
+      "('Cross Lunges', 1)\n",
+      "('Lunge[Dumbbell]', 1)\n",
+      "('Vipr Lateral Shuffle', 1)\n",
+      "('Sumo Deadlift[Kettlebell]', 1)\n",
+      "('One Arm Low Row[Machine]', 1)\n",
+      "('Biceps Curls[EZ Curl Bar]', 1)\n"
      ]
     }
    ],
