--- a/analytics/exploring01.ipynb
+++ b/analytics/exploring01.ipynb
@@ -94,8 +94,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Raw Data Count(Exercises, Days): (2356, 327)\n",
-      "Exercise Transform Data(Tuple) Count: 2356\n"
+      "Raw Data Count(Exercises, Days): (2363, 329)\n",
+      "Exercise Transform Data(Tuple) Count: 2363\n"
      ]
     }
    ],
@@ -174,7 +174,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Exercise Days: 327\n"
+      "Exercise Days: 329\n"
      ]
     }
    ],
@@ -200,7 +200,7 @@
      "text": [
       "('Arnold Press[Dumbbell]', 30)\n",
       "('Assisted Dips[Machine]', 57)\n",
-      "('Assisted Pull-Up[Machine]', 71)\n",
+      "('Assisted Pull-Up[Machine]', 72)\n",
       "('Back Extension', 44)\n",
       "('Barbell Lunge[Smith Machine]', 1)\n",
       "('Behind The Neck Press[Smith Machine]', 6)\n",
@@ -255,11 +255,11 @@
       "('Jump Squat[Kettlebell]', 1)\n",
       "('Lat Pulldown[Machine]', 113)\n",
       "('Leg Extension[Machine]', 64)\n",
-      "('Long Pull Row[Cable]', 78)\n",
+      "('Long Pull Row[Cable]', 79)\n",
       "('Lunge[Dumbbell]', 1)\n",
       "('Lying Leg Curls[Machine]', 128)\n",
       "('Lying Triceps Extension[EZ Curl Bar]', 10)\n",
-      "('Military Press[Smith Machine]', 20)\n",
+      "('Military Press[Smith Machine]', 21)\n",
       "('One Arm Bent Over Row[Dumbbell]', 4)\n",
       "('One Arm Low Row[Machine]', 1)\n",
       "('One Arm Seated Row[Machine]', 6)\n",
@@ -273,15 +273,15 @@
       "('Push-Up', 11)\n",
       "('Reverse Cable Cross-Over[Cable]', 5)\n",
       "('Reverse Crunch', 4)\n",
-      "('Reverse Pec Deck Fly[Pec Deck Machine]', 32)\n",
-      "('Running', 49)\n",
+      "('Reverse Pec Deck Fly[Pec Deck Machine]', 33)\n",
+      "('Running', 51)\n",
       "('Seated Bent Over Lateral Raise[Dumbbell]', 6)\n",
       "('Seated Chest Press[Machine]', 91)\n",
       "('Seated Leg Press[Machine]', 14)\n",
       "('Seated Reverse Fly[Dumbbell]', 1)\n",
       "('Seated Row[Machine]', 82)\n",
       "('Shoulder Press[Machine]', 87)\n",
-      "('Side Lateral Raise[Dumbbell]', 79)\n",
+      "('Side Lateral Raise[Dumbbell]', 80)\n",
       "('Side Lateral Raise[Machine]', 11)\n",
       "('Side-Lying Hip Abduction', 32)\n",
       "('Split Squat', 1)\n",
@@ -339,48 +339,48 @@
       "('Lat Pulldown[Machine]', 113)\n",
       "('Plank', 104)\n",
       "('Deadlift[Barbell]', 101)\n",
-      "('Seated Chest Press[Machine]', 91)\n",
       "('Hip Abduction[Machine]', 91)\n",
+      "('Seated Chest Press[Machine]', 91)\n",
       "('Shoulder Press[Machine]', 87)\n",
       "('Seated Row[Machine]', 82)\n",
       "('Hip Adduction[Machine]', 81)\n",
-      "('Side Lateral Raise[Dumbbell]', 79)\n",
-      "('Long Pull Row[Cable]', 78)\n",
-      "('Assisted Pull-Up[Machine]', 71)\n",
+      "('Side Lateral Raise[Dumbbell]', 80)\n",
+      "('Long Pull Row[Cable]', 79)\n",
+      "('Assisted Pull-Up[Machine]', 72)\n",
       "('Flat Bench Press[Barbell]', 71)\n",
       "('Power Leg Press[Machine]', 68)\n",
       "('Leg Extension[Machine]', 64)\n",
-      "('Assisted Dips[Machine]', 57)\n",
       "('Straight Arm Pulldown[Cable]', 57)\n",
+      "('Assisted Dips[Machine]', 57)\n",
       "('Chest Fly[Pec Deck Machine]', 55)\n",
-      "('Running', 49)\n",
+      "('Running', 51)\n",
       "('Back Extension', 44)\n",
       "('Incline Bench Press[Machine]', 40)\n",
       "('One Leg Deadlift[Kettlebell]', 38)\n",
       "('Wide Pulldown Rear[Machine]', 35)\n",
+      "('Reverse Pec Deck Fly[Pec Deck Machine]', 33)\n",
       "('Side-Lying Hip Abduction', 32)\n",
-      "('Reverse Pec Deck Fly[Pec Deck Machine]', 32)\n",
-      "('Incline Bench Press[Dumbbell]', 30)\n",
       "('Arnold Press[Dumbbell]', 30)\n",
+      "('Incline Bench Press[Dumbbell]', 30)\n",
       "('Incline Bench Press[Barbell]', 27)\n",
       "('Incline Bench Press[Smith Machine]', 26)\n",
       "('Wrist Roller', 22)\n",
-      "('Military Press[Smith Machine]', 20)\n",
+      "('Military Press[Smith Machine]', 21)\n",
       "('Dips', 20)\n",
       "(\"Hanging Leg Raise[Captain'S Chair]\", 20)\n",
       "('Upright Row[EZ Curl Bar]', 19)\n",
       "('Bent Over Row[Barbell]', 19)\n",
-      "('Split Squat[Smith Machine]', 18)\n",
+      "('Bent Over Row[Dumbbell]', 18)\n",
       "('Goblet Squat[Kettlebell]', 18)\n",
       "('Flat Bench Press[Dumbbell]', 18)\n",
-      "('Bent Over Row[Dumbbell]', 18)\n",
+      "('Split Squat[Smith Machine]', 18)\n",
       "('Hip Bridge', 15)\n",
-      "('Triceps Pushdown[Cable]', 14)\n",
       "('Seated Leg Press[Machine]', 14)\n",
+      "('Triceps Pushdown[Cable]', 14)\n",
       "('Biceps Curls[Machine]', 13)\n",
-      "('Deadlift[Kettlebell]', 12)\n",
       "('Hammer Curls[Dumbbell]', 12)\n",
       "('Pull-Up', 12)\n",
+      "('Deadlift[Kettlebell]', 12)\n",
       "('Side Lateral Raise[Machine]', 11)\n",
       "('Push-Up', 11)\n",
       "('Lying Triceps Extension[EZ Curl Bar]', 10)\n",
@@ -389,62 +389,62 @@
       "('Deadlift[Dumbbell]', 8)\n",
       "('Cable Cross-Over[Cable]', 8)\n",
       "('Flat Bench Press[Machine]', 8)\n",
-      "('Split Squat[Kettlebell]', 7)\n",
       "('Flat Bench Press[Smith Machine]', 7)\n",
-      "('Behind The Neck Press[Smith Machine]', 6)\n",
-      "('Hack Squat[Machine]', 6)\n",
+      "('Split Squat[Kettlebell]', 7)\n",
       "('Seated Bent Over Lateral Raise[Dumbbell]', 6)\n",
+      "('Behind The Neck Press[Smith Machine]', 6)\n",
       "('One Arm Seated Row[Machine]', 6)\n",
-      "('Hip Thrust', 5)\n",
+      "('Hack Squat[Machine]', 6)\n",
       "('Body-Weight Squat', 5)\n",
       "('Squat[Dumbbell]', 5)\n",
       "('Reverse Cable Cross-Over[Cable]', 5)\n",
-      "('Goblet Squat[Dumbbell]', 4)\n",
-      "('One Arm Bent Over Row[Dumbbell]', 4)\n",
+      "('Hip Thrust', 5)\n",
       "('Reverse Crunch', 4)\n",
-      "('Sumo Deadlift[Smith Machine]', 3)\n",
-      "('Hanging Leg Raise', 3)\n",
+      "('One Arm Bent Over Row[Dumbbell]', 4)\n",
+      "('Goblet Squat[Dumbbell]', 4)\n",
       "('Front Lateral Raise[Dumbbell]', 3)\n",
-      "('Bent Over Lateral Raise[Dumbbell]', 3)\n",
-      "('One Arm Shoulder Press[Dumbbell]', 3)\n",
       "('Incline Chest Fly[Dumbbell]', 3)\n",
-      "('One Leg Daedlift[Kettlebell]', 2)\n",
-      "('Biceps Curls[Dumbbell]', 2)\n",
-      "('Walking', 2)\n",
-      "('Triceps Kickback[Dumbbell]', 2)\n",
-      "('Walking Lunge[Fixed Barbell]', 2)\n",
-      "('Trx Row', 2)\n",
-      "('Wide Squat[Kettlebell]', 2)\n",
-      "('Full Squat[Barbell]', 2)\n",
+      "('Hanging Leg Raise', 3)\n",
+      "('Sumo Deadlift[Smith Machine]', 3)\n",
+      "('One Arm Shoulder Press[Dumbbell]', 3)\n",
+      "('Bent Over Lateral Raise[Dumbbell]', 3)\n",
       "('Full Squat[Smith Machine]', 2)\n",
+      "('Trx Row', 2)\n",
       "('Dead Bug', 2)\n",
+      "('Full Squat[Barbell]', 2)\n",
+      "('Biceps Curls[Dumbbell]', 2)\n",
+      "('Walking Lunge[Fixed Barbell]', 2)\n",
+      "('Wide Squat[Kettlebell]', 2)\n",
+      "('Triceps Kickback[Dumbbell]', 2)\n",
+      "('One Leg Daedlift[Kettlebell]', 2)\n",
       "('Biceps Curls[Fixed Barbell]', 2)\n",
-      "('Trx Suspended Lunge', 1)\n",
-      "('Lunge[Dumbbell]', 1)\n",
-      "('One Arm Low Row[Machine]', 1)\n",
-      "('Incline Dumbbel Row[Dumbbell]', 1)\n",
-      "('Hip External Rotation', 1)\n",
+      "('Walking', 2)\n",
       "('Vipr Ice Skater', 1)\n",
       "('Barbell Lunge[Smith Machine]', 1)\n",
-      "('Biceps Curls[Barbell]', 1)\n",
-      "('Sumo Squat[Kettlebell]', 1)\n",
-      "('Vipr Overhead Squat', 1)\n",
       "('Face Pulls[Cable]', 1)\n",
-      "('One Leg Deadlift[Dumbbell]', 1)\n",
-      "('Incline Bench Row[Dumbbell]', 1)\n",
-      "('Cross Lunges', 1)\n",
-      "('Vipr Lateral Shuffle', 1)\n",
-      "('Hip Abduction', 1)\n",
-      "('Trx Lunge', 1)\n",
-      "('Jump Squat[Kettlebell]', 1)\n",
-      "('Biceps Curls[EZ Curl Bar]', 1)\n",
-      "('Sumo Deadlift[Kettlebell]', 1)\n",
       "('Incline Bench Cable Fly[Cable]', 1)\n",
+      "('One Arm Low Row[Machine]', 1)\n",
       "('Split Squat', 1)\n",
-      "('Seated Reverse Fly[Dumbbell]', 1)\n",
+      "('Incline Dumbbel Row[Dumbbell]', 1)\n",
+      "('Cable Chest Fly[Cable]', 1)\n",
+      "('Biceps Curls[EZ Curl Bar]', 1)\n",
+      "('Biceps Curls[Barbell]', 1)\n",
+      "('Sumo Deadlift[Kettlebell]', 1)\n",
+      "('Cross Lunges', 1)\n",
+      "('Sumo Squat[Kettlebell]', 1)\n",
+      "('Hip External Rotation', 1)\n",
       "('Split Squat[Dumbbell]', 1)\n",
+      "('Vipr Lateral Shuffle', 1)\n",
+      "('Incline Bench Row[Dumbbell]', 1)\n",
+      "('One Leg Deadlift[Dumbbell]', 1)\n",
       "('Squat[Kettlebell]', 1)\n",
-      "('Cable Chest Fly[Cable]', 1)\n"
+      "('Trx Suspended Lunge', 1)\n",
+      "('Trx Lunge', 1)\n",
+      "('Vipr Overhead Squat', 1)\n",
+      "('Jump Squat[Kettlebell]', 1)\n",
+      "('Lunge[Dumbbell]', 1)\n",
+      "('Seated Reverse Fly[Dumbbell]', 1)\n",
+      "('Hip Abduction', 1)\n"
      ]
     }
    ],
